// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberIcon /> Default story renders snapshot 1`] = `
<span
  aria-label="Step 1"
  class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
>
  1
</span>
`;

exports[`<NumberIcon /> DifferentNumbers story renders snapshot 1`] = `
<div>
  <span
    aria-label="Step 0"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    0
  </span>
  <span
    aria-label="Step 1"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    1
  </span>
  <span
    aria-label="Step 2"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    2
  </span>
  <span
    aria-label="Step 3"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    3
  </span>
  <span
    aria-label="Step 4"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    4
  </span>
  <span
    aria-label="Step 5"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    5
  </span>
  <span
    aria-label="Step 6"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    6
  </span>
  <span
    aria-label="Step 7"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    7
  </span>
  <span
    aria-label="Step 8"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    8
  </span>
  <span
    aria-label="Step 9"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    9
  </span>
  <span
    aria-label="Step 10"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    10
  </span>
  <span
    aria-label="Step 21"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    21
  </span>
  <span
    aria-label="Step 32"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    32
  </span>
  <span
    aria-label="Step 43"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    43
  </span>
  <span
    aria-label="Step 54"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    54
  </span>
  <span
    aria-label="Step 65"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    65
  </span>
  <span
    aria-label="Step 76"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    76
  </span>
  <span
    aria-label="Step 87"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    87
  </span>
  <span
    aria-label="Step 98"
    class="number-icon number-icon--base number-icon--undefined text text--sm text--base"
  >
    98
  </span>
</div>
`;

exports[`<NumberIcon /> Small story renders snapshot 1`] = `
<span
  aria-label="Step 1"
  class="number-icon number-icon--base number-icon--sm text text--sm text--base"
>
  1
</span>
`;

exports[`<NumberIcon /> Success story renders snapshot 1`] = `
<span
  aria-label="Step 1"
  class="number-icon number-icon--success number-icon--undefined text text--sm text--white"
>
  1
</span>
`;

exports[`<NumberIcon /> SuccessSmall story renders snapshot 1`] = `
<span
  aria-label="Step 1"
  class="number-icon number-icon--success number-icon--sm text text--sm text--white"
>
  1
</span>
`;
